--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -1,8 +1,8 @@
 // Counter Area Two
 .home-two-counter-area {
   position: relative;
-  padding-top: 154px;
-  padding-bottom: 134px;
+  padding-top: 141px;
+  padding-bottom: 151px;
   overflow: hidden;
 
   @include md {
@@ -30,7 +30,8 @@
   }
 
   .counter-area-two-inner {
-    padding: 145px 0;
+    padding-top: 144px;
+    padding-bottom: 140px;
     position: relative;
     background-color: $primary-color;
     border-radius: 0 18px 18px 0;
@@ -57,8 +58,8 @@
 
 // Process Step Two Area
 .home-two-process-step-two-area {
-  padding-top: 380px;
-  padding-bottom: 64px;
+  padding-top: 363px;
+  padding-bottom: 66px;
 
   @include sm {
     padding-top: 340px;
@@ -145,7 +146,7 @@
 // Accordion Area
 .home-two-accordion-area {
   padding-top: 140px;
-  padding-bottom: 157px;
+  padding-bottom: 144px;
   z-index: 2;
 
   @include md() {
@@ -200,7 +201,7 @@
 }
 // Testimonial Area
 .home-two-testimonial-area {
-  padding-top: 145px;
+  padding-top: 140px;
 
   @include md {
     padding: 0;
@@ -310,8 +311,8 @@
 
 // News Area
 .home-two-news-area {
-  padding-top: 80px;
-  padding-bottom: 107px;
+  padding-top: 110px;
+  padding-bottom: 109px;
 
   @include md() {
     padding: 100px 0;
@@ -340,7 +341,8 @@
 
 // Team Member Area
 .home-two-team-member-area {
- padding: 139px 0;
+ padding-top: 140px;
+  padding-bottom: 145px;
 
   @include md() {
     padding: 100px 0;
@@ -352,7 +354,7 @@
 
 // Project Area
 .home-two-project-area {
-  padding-bottom: 143px;
+  padding-bottom: 144px;
 
   @include rmaxwd(767) {
     padding-top: 70px;
@@ -362,8 +364,8 @@
 
 // Why Choose Us Area
 .home-two-why-choose-area {
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding-top: 140px;
+  padding-bottom: 108px;
 
   @include md() {
     padding-top: 100px;
